<resources>
    <string name="app_name">Store Inventory</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="delete_all_entries">Delete All Entries</string>
    <string name="editor_add_product">Add Product</string>
    <string name="save_changes">Save</string>
    <string name="delete_entry">Delete</string>
    <string name="editor_header_text">Add a new product to the Database</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Price</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_supplier_name">Supplier Name</string>
    <string name="product_supplier_phone_number">Supplier Phone Number</string>
    <string name="entries_text_view_intro_text">The Table Consists of : </string>
    <string name="notice_editor_required_fields"><u>Notice</u> : All fields are required!</string>
    <string name="empty_view_text">There are no listed items yet!</string>
    <string name="editor_edit_product_header">Edit Product</string>
    <string name="editor_error_saving_product">Error Saving Product</string>
    <string name="editor_successful_update">The product has been successfully updated</string>
    <string name="editor_failed_update">Failed to update the product</string>
    <string name="delete_msg">Are you sure you want to delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_product_failed">Failed to delete the product</string>
    <string name="delete_product_successful">The product has been successfully deleted</string>
    <string name="abort_editing">Abort Editing and exit?</string>
    <string name="abort">Abort</string>
    <string name="continue_editing">Continue Editing</string>
    <string name="do_nothing_when_field_isnull">All fields are required to adjust OR add a product</string>
    <string name="new_product_added_to_database">The new product has been added to the database</string>
    <string name="edit_product">Edit Product</string>
    <string name="upload_image"><u>Upload Image</u></string>
</resources>
