<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/main_view_margin"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        tools:text="@string/editor_header_text"
        android:text="@string/editor_header_text"
        style="@style/overview"/>

    <EditText
        android:id="@+id/edit_product_name"
        android:hint="@string/product_name"
        style="@style/edit_text_product_name" />

    <EditText
        android:id="@+id/edit_product_price"
        android:hint="@string/product_price"
        style="@style/edit_text_price" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <EditText
        android:id="@+id/edit_product_quantity"
        android:hint="@string/product_quantity"
        style="@style/edit_text_quantity" />

        <ImageButton
            android:id="@+id/minus_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:adjustViewBounds="true"
            android:background="@drawable/minus_button"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <ImageButton
            android:id="@+id/plus_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/plus_button"
            android:adjustViewBounds="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/edit_product_supplier_name"
        android:hint="@string/product_supplier_name"
        style="@style/edit_text_supplier_name" />

    <EditText
        android:id="@+id/edit_product_supplier_phone_number"
        android:hint="@string/product_supplier_phone_number"
        style="@style/edit_text_supplier_phone_number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:text="@string/notice_editor_required_fields"
        android:textAlignment="center"
        android:textColor="@color/notice_color_red"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="@dimen/notice_required_fields"
        android:text="@string/notice_editor_required_fields"/>
</LinearLayout>