<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/main_view_margin"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:text="@string/overview"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/edit_product_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/product_name"
        android:textAlignment="center"
        android:inputType="textCapWords"/>

    <EditText
        android:id="@+id/edit_product_price"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/product_price"
        android:textAlignment="center"
        android:inputType="textCapWords"/>

    <EditText
        android:id="@+id/edit_product_quantity"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/product_quantity"
        android:textAlignment="center"
        android:inputType="textCapWords"/>

    <EditText
        android:id="@+id/edit_product_supplier_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/product_supplier_name"
        android:textAlignment="center"
        android:inputType="textCapWords"/>

    <EditText
        android:id="@+id/edit_product_supplier_phone_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/product_supplier_phone_number"
        android:textAlignment="center"
        android:inputType="phone"/>
</LinearLayout>